--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -23,10 +23,14 @@ jobs:
 
   BuildHtml:
     runs-on: self-hosted
+
+    steps:
       - name: run the updater script
         run: cd /home/ubuntu/coding/pacblog && hugo
 
   RestartNginx:
     runs-on: self-hosted
+
+      steps:
       - name: restart nginx server
         run:  sudo systemctl restart nginx
