--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   UpdateTheme:
@@ -26,7 +26,7 @@ jobs:
 
   RestartNginx:
     runs-on: self-hosted
-    
+
     steps:
       - name: restart nginx server
         run:  sudo systemctl restart nginx
