--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -8,6 +8,9 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      - name: Pull Submodule Papermod
+        run: cd /home/ubuntu/coding/pacblog && git submodule update --init --recursive
+
       - name: Update theme from papermod
         run: cd /home/ubuntu/coding/pacblog/themes/PaperMod && git pull origin
 
