--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -24,7 +24,7 @@ jobs:
 
   GenerateHtmlFiles:
     runs-on: self-hosted
-    needs: UpdateServer UpdateTheme
+    needs: [UpdateServer,UpdateTheme]
     steps:
       - name: run the updater script
         run: cd /home/ubuntu/coding/pacblog && hugo
