--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/PaperMod"]
 	path = themes/PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "public/projects/webrun"]
+	path = public/projects/webrun
+	url = https://github.com/itspacchu/webprojects
