--- a/config.toml
+++ b/config.toml
@@ -73,7 +73,7 @@ url = "resume.pdf"
 
 [[params.socialIcons]]
 name = "linkedin"
-url = "https://www.linkedin.com/in/itspacchu/"
+url = "https://in.linkedin.com/in/prashantnook"
 
 [[params.socialIcons]]
 name = "github"
