--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -28,10 +28,10 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name Login into docker
+      - name: Login into docker
         run: docker login -u $ itspacchu -p ${{ secrets.GITLAB_PASSWORD }} registry.gitlab.com/itspacchu/pacblog
-      - name Build docker
+      - name: Build docker
         run: docker build -t registry.gitlab.com/itspacchu/pacblog:arm .
-      - name Push Registry
+      - name: Push Registry
         run: docker push registry.gitlab.com/itspacchu/pacblog:arm
 
