--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login into docker
-        run: docker login -u itspacchu -p ${{ secrets.GITHUB_TOKEN }} registry.gitlab.com/itspacchu/pacblog
+        run: docker login -u itspacchu -p ${{ secrets.GITLAB_PASSWORD }} registry.gitlab.com/itspacchu/pacblog
       - name: Build docker
         run: docker buildx build --platform=linux/arm64 -t registry.gitlab.com/itspacchu/pacblog:arm .
       - name: Push Registry
