--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
         - hugo
       volumes:
       - ./build:/usr/share/nginx/html
-      - ~/cdn:/usr/share/nginx/html/cdn
+      - /home/ubuntu/cdn:/usr/share/nginx/html/cdn
       - ./nginx/default:/etc/nginx/sites-enables/default
       ports:
       - "8086:80"
