--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -15,7 +15,7 @@ jobs:
       env:
         FORCE_PUSH: "false"
         GITLAB_HOSTNAME: "gitlab.com"
-        GITLAB_USERNAME: "svboxel"
+        GITLAB_USERNAME: "itspacchu"
         GITLAB_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
         GITLAB_PROJECT_ID: "42900035"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
