allow multiple media filetypes

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,7 +31,7 @@ http {
       listen [::]:80 default_server;
 
       root /usr/share/nginx/html;
-      index index.html index.htm;
+      index index.html index.htm *.pdf *.mp4 *.mp3 *.png *.jpeg;
 
       server_name _;
       location / {
