--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -13,7 +13,7 @@ jobs:
       with:
         args: "https://gitlab.com/itspacchu/pacblog"
       env:
-        FORCE_PUSH: "false"
+        FORCE_PUSH: "true"
         GITLAB_HOSTNAME: "gitlab.com"
         GITLAB_USERNAME: "itspacchu"
         GITLAB_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
