--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,17 +27,22 @@ http {
 
     #gzip  on;
     server {
-      listen 80 default_server;
-      listen [::]:80 default_server;
+	listen 80 default_server;
+	listen [::]:80 default_server;
 
-      root /usr/share/nginx/html;
-      index index.html index.htm *.pdf *.mp4 *.mp3 *.png *.jpeg;
+	root /usr/share/nginx/html;
+	index index.html index.htm;
 
-      server_name _;
-      location / {
-          try_files $uri $uri/ =404;
-      }
-  }
+	server_name _;
+
+	location / {
+	    try_files $uri $uri/ =404;
+	}
+
+	location ~* \.(pdf|png|jpeg|mp4|mp3|zip|tar|gz)$ {
+	    try_files $uri =404;
+	}
+    }
     
 
     include /etc/nginx/conf.d/*.conf;
