--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -27,8 +27,10 @@ jobs:
       - uses: actions/checkout@v1
       - name: Login into docker
         run: podman login -u itspacchu -p ${{ secrets.GITLAB_PASSWORD }} registry.gitlab.com/itspacchu/pacblog
-      - name: Build and Push
-        run: podman build -t registry.gitlab.com/itspacchu/pacblog:arm${{ github.run_number }} --push .
+      - name: Build
+        run: podman build -t registry.gitlab.com/itspacchu/pacblog:arm${{ github.run_number }} .
+      - name: Push image 
+        run: podman push registry.gitlab.com/itspacchu/pacblog:arm${{ github.run_number }}
 
   RunOnHomePi:
     needs: [GitLabRegistryPush] 
