--- a/.github/workflows/runner.yaml
+++ b/.github/workflows/runner.yaml
@@ -21,7 +21,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
   GitLabRegistryPush:
-    needs: [GitlabMirror]
+    # needs: [GitlabMirror]
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@v1
