--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ author:
   name: "Prashant Nandipati"
 
 params:
-  author: "Prashant N"
+  author: "Prashant Nandipati"
   paginationSinglePost: true
   style: "auto"
   readMore: true
@@ -36,19 +36,34 @@ params:
   ShowToc: true
   images:
     - "https://github.com/user-attachments/assets/5315feb1-d53b-4f96-b158-fe9f199fd226"
+
+  homeInfoParams:
+    Title: "Prashant's Nook"
+    Content: "Pause and ponder the chaos of this universe!"
+    buttons:
+      - name: "About"
+        url: "/about/"
+      - name: "Projects"
+        url: "/projects/"
+      - name: "Posts"
+        url: "/post/"
+      - name: "Résumé"
+        url: "https://cdn.prashantnook.in/resume.pdf"
+
+
   profileMode:
-    enabled: true
+    enabled: false
     title: "Prashant's Nook"
     subtitle: "Hello fellow earthlings, I see you have stumbled on my website <hr> Here are some places you can go to."
     imageUrl: "https://avatars.githubusercontent.com/u/37984032"
     imageTitle: "rip internet!"
     buttons:
       - name: "About"
-        url: "about/"
+        url: "/about/"
       - name: "Projects"
-        url: "projects/"
+        url: "/projects/"
       - name: "Posts"
-        url: "post/"
+        url: "/post/"
       - name: "Résumé"
         url: "https://cdn.prashantnook.in/resume.pdf"
   socialIcons:
@@ -56,8 +71,6 @@ params:
       url: "https://in.linkedin.com/in/prashantnook"
     - name: "github"
       url: "https://github.com/itspacchu"
-    - name: "spotify"
-      url: "https://open.spotify.com/user/pacchuprashant"
     - name: "instagram"
       url: "https://instagram.com/itspacchu"
     - name: "youtube"
