--- a/config.yaml
+++ b/config.yaml
@@ -1,105 +1,74 @@
-baseURL: "https://prashantnook.in"
-languageCode: "en-us"
-title: "Prashant's Nook"
-theme: "PaperMod-pacblog"
-paginate: 4
-disqusShortname: ""
-googleAnalytics: ""
+# Base URL used when generating links to your pages
+# Set to the URL for your site
+baseURL: "https://pacsui.me"
 
-author:
-  name: "Prashant Nandipati"
+# The name of this wonderful theme ;-).
+theme: "hugo-bearblog"
+
+# Basic metadata configuration for your blog.
+title: "Pacsui's Blog"
+author: "Prachi"
+copyright: "Prachi"
+languageCode: "en-US"
+
+# Generate a nice robots.txt for SEO
+enableRobotsTXT: true
+
+# Generate "Bearblog"-like URLs !only!, see https://bearblog.dev/.
+disableKinds:
+  - "taxonomy"
+
+ignoreErrors:
+  - "error-disable-taxonomy"
+
+permalinks:
+  blog: "/:slug/"
+  tags: "/blog/:slug"
 
 params:
-  author: "Prashant Nandipati"
-  paginationSinglePost: true
-  style: "auto"
-  readMore: true
-  utterancesRepo: ""
-  utterancesTheme: ""
-  utterancesIssue: ""
-  utterancesLabel: ""
-  social:
-    - id: "linkedin"
-      url: "https://linkedin.com/user/itspacchu"
-    - id: "github"
-      url: "https://github.com/itspacchu"
-  env: "production"
-  description: "Prashant's Nook"
-  defaultTheme: "auto"
-  disableThemeToggle: true
-  ShowShareButtons: false
-  ShowReadingTime: true
-  displayFullLangName: true
-  ShowPostNavLinks: true
-  ShowBreadCrumbs: true
-  ShowCodeCopyButtons: true
-  ShowToc: true
+  # The "description" of your website. This is used in the meta data of your generated html.
+  description: "Pacsui ₍ᐢ. .ᐢ₎"
+
+  # The path to your "favicon". This should be a square (at least 32px x 32px) png-file.
+  # Hint: It's good practise to also put a "favicon.ico"-file into your "static"-folder.
+  favicon: "images/favicon.png"
+
+  # These "images" are used for the structured data templates. This will show up, when
+  # services like Twitter or Slack want to generate a preview of a link to your site.
+  # See https://gohugo.io/templates/internal#twitter-cards and
+  # https://gohugo.io/templates/internal#open-graph.
   images:
-    - "https://cdn.prashantnook.in/img/pacstand.png"
+    - "images/share.png"
 
-  homeInfoParams:
-    Title: "Prashant's Nook"
-    Content: "Pause and ponder the chaos of this universe!"
-    buttons:
-      - name: "About"
-        url: "/about/"
-      - name: "Posts"
-        url: "/post/"
-      - name: "Résumé"
-        url: "https://cdn.prashantnook.in/resume.pdf"
+  # Another "title" :-). This one is used as the site_name on the Hugo's internal
+  # opengraph structured data template.
+  # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
+  title: "Pacsui's Blog"
 
+  # This theme will, by default, inject a made-with-line at the bottom of the page.
+  # You can turn it off, but we would really appreciate if you don’t :-).
+  # hideMadeWithLine: true
 
-  socialIcons:
-    - name: "linkedin"
-      url: "https://in.linkedin.com/in/prashantnook"
-    - name: "github"
-      url: "https://github.com/itspacchu"
-    - name: "instagram"
-      url: "https://instagram.com/itspacchu"
-    - name: "youtube"
-      url: "https://www.youtube.com/channel/UCpVLV3pxEJHfUqz6FG199Uw"
+  # By default, if you want to read more than one blog post you have to always go
+  # back to the /blog page.
+  # By enabling this feature each blog post will have at the end a navigator
+  enablePostNavigator: true
 
-menu:
-  main:
-    - identifier: "about"
-      name: "About"
-      url: "/about/"
-      weight: 1
-    - identifier: "projects"
-      name: "Projects"
-      url: "/projects/"
-      weight: 2
-    - identifier: "posts"
-      name: "Posts"
-      url: "/post/"
-      weight: 3
-    - identifier: "vlogs"
-      name: "Vlogs"
-      url: "/vlogs/"
-      weight: 4
-    - identifier: "search"
-      name: "Search"
-      url: "/search/"
-      weight: 5
+  # By default, this theme displays dates with a format like "02 Jan, 2006", but
+  # you can customize it by setting the `dateFormat` param in your site's config
+  # file. See [Hugo's Format function docs](https://gohugo.io/functions/format/)
+  # for details. An example TOML config that uses [ISO
+  # 8601](https://en.wikipedia.org/wiki/ISO_8601) format:
+  # dateFormat: "2006-01-02"
 
-taxonomies:
-  category: "categories"
-  tag: "tags"
-
+# Configure markup highlighter to match "Bearblog" aesthetics, see
+# https://gohugo.io/configuration/markup/#highlight
 markup:
   goldmark:
     renderer:
       unsafe: true
   highlight:
-    noClasses: false
-    # anchorLineNos: true
-    codeFences: true
-    guessSyntax: true
+    style: "friendly"
     lineNos: true
-    style: monokai
-
-outputs:
-  home:
-    - "HTML"
-    - "RSS"
-    - "JSON"
+    lineNumbersInTable: false
+    codeFences: true
