--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "pacblog",
+  "name": "pacblog-old",
   "compatibility_date": "2025-12-22",
   "assets": {
     "directory": "./public",
