--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ baseURL: "https://pacsui.me"
 theme: "hugo-bearblog"
 
 # Basic metadata configuration for your blog.
-title: "Pacsui's Blog"
+title: "Pacsui (⸝⸝ᵕᴗᵕ⸝⸝)"
 author: "Prachi"
 copyright: "Prachi"
 languageCode: "en-US"
